# research-agent-project

./: .gitignore  README.md
backend/: README.md  package.json  pnpm-lock.yaml
backend/src/: index.js
backend/src/controllers/: auth.js  research.js
backend/src/middleware/: auth.js  quota.js
backend/src/models/: APIKey.js  User.js
backend/src/routes/: auth.js  research.js
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/chat/: page.tsx
frontend/src/app/(dashboard)/profile/: page.tsx
frontend/src/app/api/auth/: placeholder.ts
frontend/src/app/api/auth/apikey/: route.ts
frontend/src/app/api/auth/apikeys/: route.ts
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/me/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/research/: route.ts
frontend/src/app/auth/: page.tsx
frontend/src/components/: ResearchChat.tsx  app-sidebar.tsx
frontend/src/hooks/: use-chat-history.ts
research_engine/: README.md  config.py  database.py  main.py  pyproject.toml  server.py  summary_future_of_ai_agents_in_2026.txt
research_engine/agents/: analyst_agent.py  ranker_agent.py  search_agent.py  workflow.py
research_engine/models/: api_key.py  user.py
research_engine/routers/: auth.py
research_engine/utils/: scraper.py  security.py  text_process.py
(+1 files in other folders)
